@startuml Parcial 2 DB
!theme blueprint
skinparam linetype ortho
skinparam shadowing false
skinparam classAttributeIconSize 0
hide circles
hide methods


entity "Editorial" as Editorial {
  + **id_editorial** (PK) : INT
  --
  nombre : VARCHAR(100)
}

entity "Autor" as Autor {
  + **id_autor** (PK) : INT
  --
  nombre : VARCHAR(100)
}

entity "Libro" as Libro {
  + **id_libro** (PK) : INT
  --
  titulo : VARCHAR(200)
  año : INT
  # id_editorial (FK) : INT
}

entity "Usuario" as Usuario {
  + **id_usuario** (PK) : INT
  --
  nombre : VARCHAR(100)
  correo : VARCHAR(100)
}

entity "Prestamo" as Prestamo {
  + **id_prestamo** (PK) : INT
  --
  # id_usuario (FK) : INT
  fecha_prestamo : DATE
  fecha_devolucion : DATE
}

' aqui ta mal algo corregir

entity "DetallePrestamo" as DetallePrestamo {
  + **# id_prestamo** (PFK) : INT
  + **# id_libro** (PFK) : INT
  --
}


' 1 Editorial tiene 0..* Libros
Editorial "1" ||--o{ "0..*" Libro : "publica"

' 1 Usuario realiza 0..* Préstamos
Usuario "1" ||--o{ "0..*" Prestamo : "realiza"

' La relación N:M entre Préstamo y Libro
' se resuelve con DetallePrestamo
Prestamo "1" }o--o{ "0..*" Libro : "contiene"
(Prestamo, Libro) . DetallePrestamo

' La entidad "Autor" está definida en los scripts, 
' pero la relación N:M con Libro (mencionada en la sección 2)
' no fue implementada en las tablas de la sección 3.
Autor .. "Autor" : (Relación N:M con Libro no implementada en scripts)

@enduml